added: router, collection

--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,9 @@
   <body>
     <div id="mocha"></div>
     <div id="fixture-1" class="hidden"></div>
+    <div id="fixture-2" class="hidden">
+      <a href="/users" id="users">hihi</a>
+    </div>
 
     <script type="text/xx-appify" data-template-name="user">
       {{name}}
